# GradientFilter-CVPR23

./: LICENSE  LICENSE.txt  README.md  Readme.md
classification/: .gitignore  trainer_cls.py  util.py
classification/classification/: model.py
classification/custom_op/: conv_avg.py  register.py
classification/data/cifar10/: usr_group_15.29.npy
classification/data/cifar100/: usr_group_15.82.npy
classification/dataloader/: pl_dataset.py  sampling.py
classification/models/: LICENSE
classification/models/encoders/: __init__.py  mcunet.py  mobilenet.py  resnet.py
classification/scripts/mbv2/: mbv2_cifar100_base.sh  mbv2_cifar100_r2.sh  mbv2_cifar100_r4.sh  mbv2_cifar100_r7.sh  mbv2_cifar10_base.sh  mbv2_cifar10_r2.sh  mbv2_cifar10_r4.sh  mbv2_cifar10_r7.sh  mbv2_imagenet_base_l2.sh  mbv2_imagenet_base_l4.sh  mbv2_imagenet_filt_l2.sh  mbv2_imagenet_filt_l4.sh
classification/scripts/mcunet/: mcu_cifar100_base.sh  mcu_cifar100_r2.sh  mcu_cifar100_r4.sh  mcu_cifar100_r7.sh  mcu_cifar10_base.sh  mcu_cifar10_r2.sh  mcu_cifar10_r4.sh  mcu_cifar10_r7.sh  mcu_imagenet_base_l2.sh  mcu_imagenet_base_l4.sh  mcu_imagenet_filt_l2.sh  mcu_imagenet_filt_l4.sh
classification/scripts/res18/: res18_cifar100_r2.sh  (+11 more)
latency/: .gitignore  CMakeLists.txt  cudnn_prof.cpp  dnnl_prof.cpp  run_test.sh
segmentation/: .gitignore  dist_train.sh  slurm_train.sh  train.py
segmentation/custom_op/: conv_avg.py  register.py
segmentation/custom_op/latency/: .gitignore  CMakeLists.txt  cudnn_conv.cpp  cudnn_prof.cpp  dnnl_conv.cpp  dnnl_prof.cpp  jetson_pwr_logger.cpp  log_analyse.ipynb  test.sh  test_cfg.txt
segmentation/results/: dlv3.csv  dlv3m.csv  fcn.csv  psp.csv  pspm.csv  uper.csv
segmentation/scripts/: calib.sh  example_dlv3.sh
segmentation/tools/: compare_ckpt.py  get_miou.py
(+116 files in other folders)
